--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,13 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [2.7, pypy2, 3.5, 3.6, 3.7, 3.8, 3.9, pypy3]
+        python: [2.7, 3.5, 3.6, 3.7]
     name: Python ${{ matrix.python }}
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - run: ./src/get-velocity.py
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - run: python src/get-velocity.py
