--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [2.7, 3.5, 3.6, 3.7]
+        python: [3.6, 3.7, 3.8, 3.9]
     name: Python ${{ matrix.python }}
     steps:
       - uses: actions/checkout@v2
@@ -18,5 +18,5 @@ jobs:
           python-version: ${{ matrix.python }}
       - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r src/requirements.txt
       - run: python src/get-velocity.py
