debug: cd into src, then run main python script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,6 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r src/requirements.txt
-      - run: cd src
-      - run: python get-velocity.py
+      - run: |
+        cd src
+        python get-velocity.py
