--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,8 @@ jobs:
       - run: |
           cd src
           python get-velocity.py
+      - name: Upload flow image
+      uses: actions/upload-artifact@v2
+      with:
+        name: flow image
+        path: result.jpg
