--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:	
           name: ${{ env.name }}-name	
-          path: ${{ github.workspace }}/**/*
+          path: ${{ github.workspace }}/result.jpg
