--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,8 @@ jobs:
       - run: |
           cd src
           python get-velocity.py
-          ls
       - name: Upload flow image
         uses: actions/upload-artifact@v2
         with:	
-          name: ${{ env.name }}-name	
-          path: ${{ github.workspace }}/data/final/result.jpg
+          name: save
+          path: ./data/final/result.jpg
