--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Upload flow image
         uses: actions/upload-artifact@v2
         with:	
-          name: save
-          path: ~/data/final/result.jpg
+          name: my-artifact ${{ matrix.node-version }}
+          path: ${{ github.workspace }}/data/**/*
